# WorkmateTask

./: README.md
employee_performance/: data_loader.py  main.py  pyproject.toml  reports.py  requirements-dev.txt  validators.py
employee_performance/tests/: test_data_loader.py  test_reports.py  test_validators.py
